// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TopNavItem /> shapshots should render empty 1`] = `
<div
  className="topNavItem"
  onClick={[Function]}
  style={undefined}
/>
`;

exports[`<TopNavItem /> shapshots should render selected if prop set to true 1`] = `
<div
  className="topNavItem"
  onClick={[Function]}
  style={undefined}
/>
`;

exports[`<TopNavItem /> shapshots should render with the given children 1`] = `
<div
  className="topNavItem"
  onClick={[Function]}
  style={undefined}
>
  <div>
    child1
  </div>
  <div>
    child2
  </div>
</div>
`;

exports[`<TopNavItem /> shapshots should render with the specified style 1`] = `
<div
  className="topNavItem"
  onClick={[Function]}
  style={
    Object {
      "border": "3px solid #FFFFFF",
    }
  }
/>
`;
